--- a/package.json
+++ b/package.json
@@ -1,40 +1,22 @@
 {
-  "name": "wwwroot",
+  "name": "ucommpayment",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha",
-    "funcpack": "funcpack pack . -c && cp -r localfiles .funcpack",
-    "test-unit": "mocha test/unit/*.js --reporter mocha-junit-reporter",
-    "test-api": "mocha test/api/*.js --reporter mocha-junit-reporter"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/tmeht03/ucommPaymentProd.git"
+  },
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "@sendgrid/mail": "^6.1.4",
-    "applicationinsights": "^1.0.2",
-    "axios": "^0.17.1",
-    "azure-functions-core-tools": "^2.0.3",
-    "crypto-js": "^3.1.9-1",
-    "csv-parse": "^2.0.0",
-    "joi": "^13.0.2",
-    "js2xmlparser": "^3.0.0",
-    "mongoose": "^4.13.4",
-    "mongoose-auto-increment": "^5.0.1",
-    "request-promise": "^4.2.2",
-    "utf8": "^3.0.0",
-    "xml2js": "^0.4.19"
+  "bugs": {
+    "url": "https://github.com/tmeht03/ucommPaymentProd/issues"
   },
+  "homepage": "https://github.com/tmeht03/ucommPaymentProd#readme",
   "devDependencies": {
-    "chai": "^4.1.2",
-    "mocha": "^5.2.0",
-    "supertest": "^3.1.0",
-    "eslint": "^4.13.1",
-    "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-plugin-import": "^2.8.0",
-    "azure-functions-pack": "^1.0.0",
-    "mocha-junit-reporter": "^1.17.0"
+    "azure-functions-core-tools": "^2.0.1-beta.22"
   }
 }
