--- a/package.json
+++ b/package.json
@@ -18,5 +18,10 @@
   "homepage": "https://github.com/tmeht03/ucommPaymentProd#readme",
   "devDependencies": {
     "azure-functions-core-tools": "^2.0.1-beta.22"
+  },
+  "dependencies": {
+    "axios": "^0.18.0",
+    "crypto-js": "^3.1.9-1",
+    "mongoose": "^5.3.4"
   }
 }
