--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   "dependencies": {
     "axios": "^0.18.0",
     "crypto-js": "^3.1.9-1",
-    "mongoose": "^5.3.4"
+    "csv-parse": "^3.1.3",
+    "mongoose": "^5.3.4",
+    "request": "^2.88.0"
   }
 }
