--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "crypto-js": "^3.1.9-1",
     "csv-parse": "^3.1.3",
     "mongoose": "^5.3.4",
+    "mquery": "^3.2.0",
     "request": "^2.88.0"
   }
 }
